force-app/main/default/objects/SIOC__BusinessLookupHistory__c/SIOC__BusinessLookupHistory__c.object-meta.xml
<CustomObject>
    <label>Business Lookup History</label>
    <nameField>
        <displayFormat>BLUP-{00000}</displayFormat>
        <label>Business Lookup History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Lookup Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>