force-app/main/default/objects/SIOC__BusinessLookupHistory__c/fields/SIOC__Action__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Update Auto</fullName>
            </value>
            <value>
                <fullName>Update Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>