force-app/main/default/objects/SIOC__BusinessLookupHistory__c/fields/SIOC__Description__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Description__c</fullName>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>