force-app/main/default/objects/SIOC__BusinessLookupHistory__c/fields/SIOC__TransactionId__c.field-meta.xml
<CustomField>
    <fullName>SIOC__TransactionId__c</fullName>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>